tree-sitter-dada/test/corpus/expressions.txt
================================================================================
numbers
================================================================================

1_122
12.098_997
1i8

--------------------------------------------------------------------------------

(source_file
  (integer_literal)
  (float_literal)
  (integer_literal))

================================================================================
format string
================================================================================

"\{\""

"{1}"

"{"{foo}"}"

--------------------------------------------------------------------------------

(source_file
  (format_string)
  (format_string
    (integer_literal))
  (format_string
    (format_string
      (identifier))))

================================================================================
bin op
================================================================================

1+2*3/2

--------------------------------------------------------------------------------

(source_file
  (binary_op_expr
    (integer_literal)
    (binary_op_expr
      (binary_op_expr
        (integer_literal)
        (integer_literal))
      (integer_literal))))

================================================================================
unary op
================================================================================

-1*2

--------------------------------------------------------------------------------

(source_file
  (binary_op_expr
    (unary_expr
      (integer_literal))
    (integer_literal)))

================================================================================
assignment
================================================================================

x = 1
x := 24
x *= 2
x /= 6
x -= 13
x += 28

--------------------------------------------------------------------------------

(source_file
  (variable_declaration
    (identifier)
    (integer_literal))
  (binary_op_expr
    (identifier)
    (integer_literal))
  (binary_op_expr
    (identifier)
    (integer_literal))
  (binary_op_expr
    (identifier)
    (integer_literal))
  (binary_op_expr
    (identifier)
    (integer_literal))
  (binary_op_expr
    (identifier)
    (integer_literal)))

================================================================================
tuples
================================================================================

# when not inside a block expression gets interpreted as call_expr
{
(1, 2)
(
  3
  4
)
(("a", "b"), 34, false)
()
# not tuple
(1)
}

--------------------------------------------------------------------------------

(source_file
  (comment)
  (block_expr
    (tuple_expr
      (integer_literal)
      (integer_literal))
    (tuple_expr
      (integer_literal)
      (integer_literal))
    (tuple_expr
      (tuple_expr
        (format_string)
        (format_string))
      (integer_literal)
      (boolean_literal))
    (tuple_expr)
    (comment)
    (parenthesized_expr
      (integer_literal))))

================================================================================
dot call
================================================================================

a.b()

--------------------------------------------------------------------------------

(source_file
  (call_expr
    (dot_expr
      (identifier)
      (identifier))))
