tree-sitter-dada/test/corpus/function.txt
================================================================================
function decl
================================================================================

fn x() -> {
  return 12
}

async fn x() {
}

fn x(a, atomic b) {
}

fn x(
  a
  atomic b
) {}

--------------------------------------------------------------------------------

(source_file
  (function
    (identifier)
    (parameters)
    (block_expr
      (return
        (integer_literal))))
  (function
    (identifier)
    (parameters)
    (block_expr))
  (function
    (identifier)
    (parameters
      (parameter
        (identifier))
      (parameter
        (atomic)
        (identifier)))
    (block_expr))
  (function
    (identifier)
    (parameters
      (parameter
        (identifier))
      (parameter
        (atomic)
        (identifier)))
    (block_expr)))
